--- a/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 
     <link href="http://fonts.googleapis.com/css?family=Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="/css/libs/materialize.min.css" media="screen,projection" />
     <link href="/css/materialize-custom.css" rel="stylesheet" />
     <link href="/css/style.css" rel="stylesheet" />
 
