--- a/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
@@ -8,8 +8,10 @@
     <link href="http://fonts.googleapis.com/css?family=Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/css/libs/materialize.min.css" media="screen,projection" />
-    <link href="/css/materialize-custom.css" rel="stylesheet" />
-    <link href="/css/style.css" rel="stylesheet" />
+    
+    <link href="~/css/recipe-base.css" rel="stylesheet" />
+
+    @RenderSection("Styles", false)
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,7 +35,6 @@
 
     @RenderBody()
 
-
     <footer class="page-footer brand-green darken-5">
         <div class="container">
         </div>
@@ -52,5 +53,7 @@
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script src="/js/ScrollTo.js"></script>
     <script src="/js/init.js"></script>
+
+    @RenderSection("Scripts", false)
 </body>
 </html>
