--- a/ClassRecipes.Web/Areas/Recipes/Views/Recipe/Recipe.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Recipe/Recipe.cshtml
@@ -1,7 +1,33 @@
-﻿@model ClassRecipes.Core.Recipe
+﻿@model ClassRecipes.Web.Areas.Recipes.Models.RecipePageModel
 
 @{
     Layout = "_Layout";
 }
 
-<h1>@Model.Title</h1>
+<partial name="_Hero.cshtml" />
+
+<div id="Start" class="article-start"></div>
+
+<div class="prereqs recipe-section">
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m12 l12">
+                <h2>Prerequisites</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12 m12 l6">
+                @await Html.PartialAsync("~/Areas/Common/Views/Shared/_CollectionWithHeader.cshtml", Model.IngredientsCollection)
+            </div>
+
+            <div class="col s12 m12 l6">
+                @await Html.PartialAsync("~/Areas/Common/Views/Shared/_CollectionWithHeader.cshtml", Model.ToolsCollection)
+            </div>
+        </div>
+
+        <div class="row center section-button-row">
+            <a href="#Instructions" class="btn-large brand-green-border-button darken-2 z-depth-0">Begin Cooking</a>
+        </div>
+    </div>
+</div>
