--- a/ClassRecipes.Web/Areas/Recipes/Views/Recipe/Recipe.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Recipe/Recipe.cshtml
@@ -31,3 +31,33 @@
         </div>
     </div>
 </div>
+
+<div class="container recipe-section" id="Instructions">
+    <div class="row">
+
+        <div class="col s12 m12 l12 no-bottom-border-on-small no-padding-sides-on-small">
+            <h2>Instructions</h2>
+        </div>
+
+    </div>
+
+    @{ var stepNumber = 1; }
+
+    @foreach (var step in Model.Recipe.Steps)
+    {
+        var stepModel = new ClassRecipes.Web.Areas.Recipes.Models.StepModel(step, stepNumber);
+
+        @await Html.PartialAsync("_Step", stepModel)
+
+        <div id="@("Step" + (stepNumber + 1))" class="divider big-space"></div>
+
+        stepNumber++;
+    }
+
+
+    <div class="row center section-button-row">
+        <a href="#Finishing" class="btn-large brand-green-border-button darken-2 z-depth-0">Finishing off</a>
+    </div>
+
+    <!--<div id="Finishing" class="divider big-space"></div>-->
+</div>
