Smooth scrolling next links

--- a/ClassRecipes.Web/Areas/Recipes/Views/Recipe/_Step.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Recipe/_Step.cshtml
@@ -33,7 +33,7 @@
                             }
                         }
                     </div>
-                    <a href="#Step@Model.NextStepIndex" class="card-action big-action brand-green lighten-4 ">
+                    <a href="#Step@(Model.NextStepIndex)" class="card-action big-action brand-green lighten-4 ">
                         <span class="brand-green-text darken-3">Next step</span><i class="material-icons right brand-green-text darken-3">arrow_downward</i>
                     </a>
                 </div>
@@ -75,7 +75,7 @@
                         }
                         </div>
 
-                    <a href="#Step@Model.NextStepIndex" class="card-action big-action brand-green lighten-4 ">
+                    <a href="#Step@(Model.NextStepIndex)" class="card-action big-action brand-green lighten-4 ">
                         <span class="brand-green-text darken-3">Next step</span><i class="material-icons right brand-green-text darken-3">arrow_downward</i>
                     </a>
                 </div>
