--- a/ClassRecipes.Web/Areas/Recipes/Views/Recipe/Recipe.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Recipe/Recipe.cshtml
@@ -59,5 +59,65 @@
         <a href="#Finishing" class="btn-large brand-green-border-button darken-2 z-depth-0">Finishing off</a>
     </div>
 
-    <!--<div id="Finishing" class="divider big-space"></div>-->
+    <div id="Finishing" class="grey lighten-3 recipe-section">
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col s12 m12 l12 no-bottom-border-on-small no-padding-sides-on-small">
+                    <h2>Finishing</h2>
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col s12 ">
+                    <div class="finishing-image material-placeholder">
+                        <img class="materialboxed responsive-img" src="/img/chilli-cake.jpg" alt="Final dish" />
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col s12 m12 l12 no-bottom-border-on-small no-padding-sides-on-small">
+                    <h4>Serve with...</h4>
+                </div>
+
+            </div>
+
+            <div class="row flex-row">
+
+                <div class="col s12 m6">
+                    <div class="card">
+                        <div class="card-content">
+                            <span class="card-title">Cayenne Chocolate Buttercream</span>
+                            <p>
+                                Add 2 tsp of cayenne pepper to 500g of chocolate buttercream or frosting.
+                            </p>
+                        </div>
+                        <!--<div class="card-action">
+                            <a href="#">Basic chocolate frosting</a>
+                        </div>-->
+                    </div>
+                </div>
+
+                <div class="col s12 m6">
+                    <div class="card horizontal">
+                        <div class="card-image thin-image">
+                            <img src="/img/chilli-syrup-vertical.jpg" />
+                        </div>
+                        <div class="card-stacked">
+                            <div class="card-content">
+                                <span class="card-title">Chilli Syrup</span>
+                                <p>Add 2tsp of cayenne chilli powder to 50ml of golden syrup and shake until fully combined.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
