--- a/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    
+
 
     @RenderBody()
 
@@ -49,12 +49,13 @@
     </footer>
 
     <!--JavaScript at end of body for optimized loading-->
-    <script src="https://code.jquery.com/jquery-1.12.4.js"
-            integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/js/materialize.min.js"></script>
-    <script src="/js/ScrollTo.js"></script>
-    <script src="/js/init.js"></script>
+
+    <script type="text/javascript" src="~/js/libs/materialize.min.js"></script>
+
+    <script src="~/js/common-scripts.js"></script>
 
     @RenderSection("Scripts", false)
 </body>
