Example with images.

--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/theme-sam.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/theme-sam.scss
@@ -1,3 +1,3 @@
-﻿@import "sam/theme-sam-variables.scss";
+﻿@import "scss/theme-sam-variables.scss";
 
-@import "../base/recipe-base";
+@import "../../scss/Base/recipe-base.scss";
