--- a/ClassRecipes.Web/Areas/Common/scss/materialize/materialize-custom-spacing.scss
+++ b/ClassRecipes.Web/Areas/Common/scss/materialize/materialize-custom-spacing.scss
@@ -42,3 +42,15 @@
     border-left: none;
     border-right: none;
 }
+
+.little-space {
+    margin: 10px;
+}
+
+.medium-space {
+    margin: 10px;
+}
+
+.big-space {
+    margin: 40px;
+}
