--- a/ClassRecipes.Web/Areas/Recipes/Views/Recipe/Recipe.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Recipe/Recipe.cshtml
@@ -51,10 +51,10 @@
 
         @await Html.PartialAsync("_Step", stepModel)
 
+        <div id="@("Step" + (stepNumber + 1))" class="divider big-space"></div>
+
         @if (!isLastStep)
         {
-            <div id="@("Step" + (stepNumber + 1))" class="divider big-space"></div>
-
             stepNumber++;
         }
     }
@@ -75,7 +75,6 @@
 
         </div>
 
-
         @if (Model.Recipe.FinishingImageUrls?.Any() == true)
         {
             var firstImageOnlyForNow = Model.Recipe.FinishingImageUrls.First();
@@ -83,7 +82,7 @@
             <div class="row">
                 <div class="col s12 ">
                     <div class="finishing-image material-placeholder">
-                        <img class="materialboxed responsive-img" src="@firstImageOnlyForNow" alt="Final dish" />
+                        @Html.RecipeImage(firstImageOnlyForNow, "Final Image", "materialboxed responsive-img")
                     </div>
                 </div>
             </div>
@@ -97,33 +96,12 @@
 
         <div class="row flex-row">
 
-            <div class="col s12 m6">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="card-title">Cayenne Chocolate Buttercream</span>
-                        <p>
-                            Add 2 tsp of cayenne pepper to 500g of chocolate buttercream or frosting.
-                        </p>
-                    </div>
-                    <!--<div class="card-action">
-                    <a href="#">Basic chocolate frosting</a>
-                </div>-->
+            @foreach(var related in Model.Recipe.RelatedFinishingRecipes)
+            {
+                <div class="col s12 m6">
+                    @await Html.PartialAsync("RecipeCard", related)
                 </div>
-            </div>
-
-            <div class="col s12 m6">
-                <div class="card horizontal">
-                    <div class="card-image thin-image">
-                        <img class="materialboxed" src="/img/chilli-syrup-vertical.jpg" />
-                    </div>
-                    <div class="card-stacked">
-                        <div class="card-content">
-                            <span class="card-title">Chilli Syrup</span>
-                            <p>Add 2tsp of cayenne chilli powder to 50ml of golden syrup and shake until fully combined.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </div>
