--- a/ClassRecipes.Web/Areas/Recipes/Views/Recipe/_Hero.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Recipe/_Hero.cshtml
@@ -1,20 +1,22 @@
-﻿<div class="hero-section" style="background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.70)), url('/img/chilli-cake-blur.jpg');">
+﻿@model ClassRecipes.Web.Areas.Recipes.Models.RecipePageModel
+
+<div class="hero-section" style="background-image: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.70)), url('/img/chilli-cake-blur.jpg');">
     <div class="section">
         <div class="container">
             <div class="row">
-                <h1 class="header center col m10 push-m1 l8 push-l2">Chilli Chocolate Mini Cakes</h1>
+                <h1 class="header center col m10 push-m1 l8 push-l2">@Model.Recipe.Title</h1>
             </div>
 
             <div class="row center">
-                <h5 class="header col s8 push-s2 m6 push-m3">An adult chocolate cake for those that don't want to believe that 'adult' food must include alcohol, this cake has a slightly spicy, smoky after taste and a deep moist chocolatey flavour.</h5>
+                <h5 class="header col s8 push-s2 m6 push-m3">@Model.Recipe.Intro</h5>
             </div>
 
             <div class="row">
 
                 <div class="col s12 header-info-with-icons">
-                    <h5 class="header-info-with-icon"><i class="small material-icons" title="Difficulty">sentiment_satisfied</i><span>Easy</span></h5>
-                    <h5 class="header-info-with-icon"><i class="small material-icons" title="Cook Time">hourglass_empty</i><span>30 mins</span></h5>
-                    <h5 class="header-info-with-icon"><i class="small material-icons" title="Total Time">access_time</i><span>60 mins</span></h5>
+                    <h5 class="header-info-with-icon"><i class="small material-icons" title="Difficulty">sentiment_satisfied</i><span>@Model.Recipe.Difficulty</span></h5>
+                    <h5 class="header-info-with-icon"><i class="small material-icons" title="Cook Time">hourglass_empty</i><span>@Model.Recipe.CookTime.ToReadableTimeSpan()</span></h5>
+                    <h5 class="header-info-with-icon"><i class="small material-icons" title="Total Time">access_time</i><span>@Model.Recipe.TotalTime.ToReadableTimeSpan()</span></h5>
                 </div>
 
             </div>
@@ -24,3 +26,4 @@
             </div>
         </div>
     </div>
+</div>
