--- a/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 <body class="grey lighten-5 food-site recipe-page">
     <nav class="navbar-material" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo"><img src="/img/logo-white-green.png" /></a>
+            <a id="logo-container" href="#" class="brand-logo"><img src="/img/logo-white-green.png" height="44" /></a>
             <!--<ul class="right hide-on-med-and-down">
                 <li><a href="#">No Pages Yet</a></li>
             </ul>
