--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/theme-sam.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/theme-sam.scss
@@ -1,3 +1,10 @@
 ﻿@import "scss/theme-sam-variables.scss";
 
 @import "../../scss/Base/recipe-base.scss";
+
+@import "scss/theme-sam-colours";
+@import "scss/theme-sam-page";
+@import "scss/theme-sam-header";
+@import "scss/theme-sam-recipe-page";
+@import "scss/theme-sam-recipe-cards";
+@import "scss/theme-sam-footer";
