--- a/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
+++ b/ClassRecipes.Web/Areas/Recipes/Views/Shared/_Layout.cshtml
@@ -3,13 +3,13 @@
 <html>
 <head>
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Material+Icons|Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
 
-    <link href="http://fonts.googleapis.com/css?family=Dancing+Script:700|EB+Garamond" rel="stylesheet" type="text/css" />
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/css/libs/materialize.min.css" media="screen,projection" />
     
     <link href="~/css/recipe-base.css" rel="stylesheet" />
+    <link href="~/css/sam/theme-sam.css" rel="stylesheet" />
 
     @RenderSection("Styles", false)
 
@@ -19,7 +19,7 @@
     <title>Sam Mullins Food</title>
 </head>
 
-<body class="grey lighten-5 food-site recipe-page">
+<body class="food-site">
     <nav class="navbar-material" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo"><img src="/img/logo-white-green.png" height="44" /></a>
@@ -32,8 +32,6 @@
             <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
-
-
 
     @RenderBody()
 
