--- a/ClassRecipes.Web/Areas/Common/scss/materialize/materialize-custom-spacing.scss
+++ b/ClassRecipes.Web/Areas/Common/scss/materialize/materialize-custom-spacing.scss
@@ -21,6 +21,14 @@
     padding: 0 !important;
 }
 
+.no-padding-top {
+    padding-top: 0 !important;
+}
+
+.no-padding-bottom {
+    padding-bottom: 0 !important;
+}
+
 .no-padding-sides {
     padding-left: 0 !important;
     padding-right: 0 !important;
