--- a/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-recipe-page.scss
+++ b/ClassRecipes.Web/Areas/Recipes/Themes/sam/scss/theme-sam-recipe-page.scss
@@ -8,11 +8,31 @@
     */
     .hero-section {
         z-index: -1;
-        padding-top: 84px;
-        padding-bottom: 20px;
+        background: $brand-colour-d5;
 
-        h1,
-        h5 {
+        .hero-background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            min-width: 1600px;
+            object-fit: cover;
+            z-index:-2;
+
+            &.blurred {
+                -webkit-filter: blur(10px); /* Safari 6.0 - 9.0 */
+                filter: blur(10px);
+                transform: scale(1.1);
+            }
+        }
+
+        .hero-content {
+            padding-top: 84px;
+            padding-bottom: 20px;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.33), rgba(0, 0, 0, 0.9));
+        }
+
+        h1, h5 {
             color: #aed581;
             text-shadow: 0 0 40px black;
         }
