--- a/ClassRecipes.Web/wwwroot/css/base.css
+++ b/ClassRecipes.Web/wwwroot/css/base.css
@@ -77,6 +77,12 @@
 .no-padding {
   padding: 0 !important; }
 
+.no-padding-top {
+  padding-top: 0 !important; }
+
+.no-padding-bottom {
+  padding-bottom: 0 !important; }
+
 .no-padding-sides {
   padding-left: 0 !important;
   padding-right: 0 !important; }
